[PSE-35] Implement server API followup. Added /archive/:archiveId and unit tests
